@@ -1,6 +1,7 @@
 package com.tihonya.datingapp.service;
 
 import com.tihonya.datingapp.dto.InterestDto;
+import com.tihonya.datingapp.exception.NotFoundException;
 import com.tihonya.datingapp.mapper.InterestMapper;
 import com.tihonya.datingapp.model.Interest;
 import com.tihonya.datingapp.model.User;
@@ -8,12 +9,13 @@ import com.tihonya.datingapp.repository.InterestRepository;
 import com.tihonya.datingapp.repository.UserRepository;
 import jakarta.transaction.Transactional;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.stereotype.Service;
 
 @Transactional
 @Service
 public class InterestService {
+    private static final String INTEREST_NOT_FOUND = "Interest not found";
+
     private final InterestRepository interestRepository;
     private final InterestMapper interestMapper;
     private final UserRepository userRepository;
@@ -37,20 +39,20 @@ public class InterestService {
     public List<InterestDto> getAllInterests() {
         return interestRepository.findAll().stream()
                 .map(interestMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // Получение интереса по ID
     public InterestDto getInterestById(Long id) {
         Interest interest = interestRepository.findById(id).orElseThrow(()
-                -> new RuntimeException("Interest not found"));
+                -> new NotFoundException(INTEREST_NOT_FOUND));
         return interestMapper.toDto(interest);
     }
 
     // Обновление интереса
     public InterestDto updateInterest(Long id, InterestDto interestDto) {
         Interest interest = interestRepository.findById(id).orElseThrow(()
-                -> new RuntimeException("Interest not found"));
+                -> new NotFoundException(INTEREST_NOT_FOUND));
         interest.setName(interestDto.getName());
         interestRepository.save(interest);
         return interestMapper.toDto(interest);
@@ -59,7 +61,7 @@ public class InterestService {
     // Удаление интереса
     public void deleteInterest(Long id) {
         Interest interest = interestRepository.findById(id).orElseThrow(()
-                -> new RuntimeException("Interest not found"));
+                -> new NotFoundException(INTEREST_NOT_FOUND));
         // Убираем связь между интересом и пользователями
         for (User user : interest.getUsers()) {
             user.getInterests().remove(interest);
